--- a/M1.md
+++ b/M1.md
@@ -1,2 +1,3 @@
-# output of StaticIntialization.java
-![Uploading WhatsApp Image 2025-12-20 at 2.50.14 PM.jpeg…]()
+# output of StaticIntialization.java)
+<img width="260" height="768" alt="image" src="https://github.com/user-attachments/assets/65661cbf-be95-42af-90e4-bcd4f7fb0dd9" />
+
