--- a/Module1_Array/M1.md
+++ b/Module1_Array/M1.md
@@ -1,3 +1,4 @@
 # output of StaticIntialization.java)
 <img width="260" height="768" alt="image" src="https://github.com/user-attachments/assets/65661cbf-be95-42af-90e4-bcd4f7fb0dd9" />
-
+#output off task-7
+<img width="503" height="321" alt="image" src="https://github.com/user-attachments/assets/0b8a6cc7-6b77-4d6d-812d-7e477ab2e754" />
