--- a/Module1_Array/M1.md
+++ b/Module1_Array/M1.md
@@ -2,3 +2,46 @@
 <img width="260" height="768" alt="image" src="https://github.com/user-attachments/assets/65661cbf-be95-42af-90e4-bcd4f7fb0dd9" />
 #output off task-7
 <img width="503" height="321" alt="image" src="https://github.com/user-attachments/assets/0b8a6cc7-6b77-4d6d-812d-7e477ab2e754" />
+#output of Que.Array
+Try programiz.pro
+is this queue empty  true
+queue is empty 
+front pointer is at 5
+rear pointer is at 5
+[0,0,0,0,0,]
+____After enque 10______ 
+front pointer is at 4
+rear pointer is at 4
+[0,0,0,0,10,]
+is this queue empty : false
+____After enque 20______ 
+front pointer is at 3
+rear pointer is at 4
+[0,0,0,10,20,]
+is this queue empty : false
+____After enque 30______ 
+front pointer is at 2
+rear pointer is at 4
+[0,0,10,20,30,]
+is this queue empty : false
+____After enque 40______ 
+front pointer is at 1
+rear pointer is at 4
+[0,10,20,30,40,]
+is this queue empty : false
+____After enque 50______ 
+front pointer is at 0
+rear pointer is at 4
+[10,20,30,40,50,]
+is this queue empty : false
+____After enque 10______ 
+queue is Full we cann't perform of enque oparation 
+____After deque oparation ______ 
+front pointer is at 1
+rear pointer is at 4
+[0,20,30,40,50,]
+is this queue empty : false
+____After deque oparation ______ 
+front pointer is at 2
+rear pointer is at 4
+[0,0,30,40,50,]
