--- a/Module1_Array/M1.md
+++ b/Module1_Array/M1.md
@@ -45,3 +45,5 @@ ____After deque oparation ______
 front pointer is at 2
 rear pointer is at 4
 [0,0,30,40,50,]
+#output of Que.Array2
+<img width="663" height="503" alt="image" src="https://github.com/user-attachments/assets/05eb3753-adde-4336-9c72-51315a4dad21" />
