--- a/Module1_Array/M1.md
+++ b/Module1_Array/M1.md
@@ -3,47 +3,7 @@
 #output off task-7
 <img width="503" height="321" alt="image" src="https://github.com/user-attachments/assets/0b8a6cc7-6b77-4d6d-812d-7e477ab2e754" />
 #output of Que.Array
-Try programiz.pro
-is this queue empty  true
-queue is empty 
-front pointer is at 5
-rear pointer is at 5
-[0,0,0,0,0,]
-____After enque 10______ 
-front pointer is at 4
-rear pointer is at 4
-[0,0,0,0,10,]
-is this queue empty : false
-____After enque 20______ 
-front pointer is at 3
-rear pointer is at 4
-[0,0,0,10,20,]
-is this queue empty : false
-____After enque 30______ 
-front pointer is at 2
-rear pointer is at 4
-[0,0,10,20,30,]
-is this queue empty : false
-____After enque 40______ 
-front pointer is at 1
-rear pointer is at 4
-[0,10,20,30,40,]
-is this queue empty : false
-____After enque 50______ 
-front pointer is at 0
-rear pointer is at 4
-[10,20,30,40,50,]
-is this queue empty : false
-____After enque 10______ 
-queue is Full we cann't perform of enque oparation 
-____After deque oparation ______ 
-front pointer is at 1
-rear pointer is at 4
-[0,20,30,40,50,]
-is this queue empty : false
-____After deque oparation ______ 
-front pointer is at 2
-rear pointer is at 4
-[0,0,30,40,50,]
+![WhatsApp Image 2026-01-24 at 16 07 30](https://github.com/user-attachments/assets/772ad429-b1d3-4401-b3e2-7ccdd1b8a345)
+
 #output of Que.Array2
-<img width="663" height="503" alt="image" src="https://github.com/user-attachments/assets/05eb3753-adde-4336-9c72-51315a4dad21" />
+![WhatsApp Image 2026-01-24 at 16 07 35](https://github.com/user-attachments/assets/58cf466f-ce76-41dd-8bfd-1c9307430ebd)
