--- a/Module1_Array/M1.md
+++ b/Module1_Array/M1.md
@@ -7,3 +7,7 @@
 
 #output of Que.Array2
 ![WhatsApp Image 2026-01-24 at 16 07 35](https://github.com/user-attachments/assets/58cf466f-ce76-41dd-8bfd-1c9307430ebd)
+#output of task-10
+<img width="558" height="601" alt="image" src="https://github.com/user-attachments/assets/78bd91ca-4406-4396-8e84-879b97ae9e20" />
+#output of task-11
+<img width="391" height="334" alt="image" src="https://github.com/user-attachments/assets/d9cc4bc3-d4f5-4295-b9e2-aff2ee276fd3" />
