--- a/Module1_Array/M1.md
+++ b/Module1_Array/M1.md
@@ -11,3 +11,4 @@
 <img width="558" height="601" alt="image" src="https://github.com/user-attachments/assets/78bd91ca-4406-4396-8e84-879b97ae9e20" />
 #output of task-11
 <img width="391" height="334" alt="image" src="https://github.com/user-attachments/assets/d9cc4bc3-d4f5-4295-b9e2-aff2ee276fd3" />
+#output of binarysearchtree<img width="497" height="233" alt="image" src="https://github.com/user-attachments/assets/cba59593-a3a8-4116-8a45-c66c395280f9" />
