--- a/Module1_Array/M1.md
+++ b/Module1_Array/M1.md
@@ -12,3 +12,4 @@
 #output of task-11
 <img width="391" height="334" alt="image" src="https://github.com/user-attachments/assets/d9cc4bc3-d4f5-4295-b9e2-aff2ee276fd3" />
 #output of binarysearchtree<img width="497" height="233" alt="image" src="https://github.com/user-attachments/assets/cba59593-a3a8-4116-8a45-c66c395280f9" />
+#output of binary insearch<img width="583" height="259" alt="image" src="https://github.com/user-attachments/assets/ce7def06-c774-46b9-bc9f-dff7415681bb" />
