--- a/Module1_Array/M1.md
+++ b/Module1_Array/M1.md
@@ -13,3 +13,4 @@
 <img width="391" height="334" alt="image" src="https://github.com/user-attachments/assets/d9cc4bc3-d4f5-4295-b9e2-aff2ee276fd3" />
 #output of binarysearchtree<img width="497" height="233" alt="image" src="https://github.com/user-attachments/assets/cba59593-a3a8-4116-8a45-c66c395280f9" />
 #output of binary insearch <img width="439" height="216" alt="image" src="https://github.com/user-attachments/assets/b06ee2f1-7a30-41e2-9d1e-c7d2529d25e6" />
+# output of bitree <img width="921" height="872" alt="image" src="https://github.com/user-attachments/assets/3f8aa9f7-bdf9-4434-8768-c2bc370a03a3" />
